[package]
name = "chaser-cf"
version = "0.2.1"
edition = "2021"
description = "High-performance Cloudflare bypass library with stealth browser automation. Rust-native with C FFI bindings."
license = "MIT OR Apache-2.0"
authors = ["ccheshirecat"]
repository = "https://github.com/ccheshirecat/chaser-cf"
keywords = ["cloudflare", "turnstile", "stealth", "browser", "automation"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "chaser_cf"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
# Enable HTTP server binary
http-server = ["axum", "tower", "tower-http"]
# Enable C FFI bindings
ffi = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
url = "2"
once_cell = "1"


# Async utilities
futures = "0.3"

# Random number generation (humanized mouse clicks)
rand = "0.9.3"

# Base64 encoding (for request interception)
base64 = "0.22"

# HTTP server (optional)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"], optional = true }
chaser-oxide = { version = "0.2.4", default-features = false, features = ["native-tls", "zip0"] }

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"

[[bin]]
name = "chaser-cf-server"
path = "src/bin/server.rs"
required-features = ["http-server"]
